Updated dependencies in HyBIG notebook (#238)
* Updated dependencies in HyBIG notebook, updated behavior of tiled tests, added new regression test for TEMPO Imagenator-L2

* Updated Changelog

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -86,6 +86,7 @@
     "    print_error,\n",
     "    assert_dataset_produced_correct_results,\n",
     "    build_file_list,\n",
+    "    build_file_list_downloads,\n",
     ")\n",
     "\n",
     "\n",
@@ -117,6 +118,7 @@
     "    'prefire_collection': Collection(id='C1263096190-EEDTEST'),\n",
     "    'antimeridian_collection': Collection(id='C1264760805-POCLOUD'),\n",
     "    'rgba_collection': Collection(id='C1259974840-ASF'),\n",
+    "    'tempo_collection': Collection(id='C1274178436-LARC_CLOUD'),\n",
     "}\n",
     "\n",
     "non_prod_granule_data = {\n",
@@ -125,10 +127,12 @@
     "    'prefire_granules': ['G1263096192-EEDTEST'],\n",
     "    'antimeridian_granules': ['G1273054128-POCLOUD'],\n",
     "    'rgba_granules': ['G1269604594-ASF'],\n",
+    "    'tempo_granules': ['G1276507896-LARC_CLOUD'],\n",
     "}\n",
     "\n",
     "non_prod_variable_data = {\n",
     "    'prefire_variable': 'flx',\n",
+    "    'tempo_variable': 'product/vertical_column_troposphere',\n",
     "}\n",
     "\n",
     "collection_data = {\n",
@@ -186,7 +190,8 @@
     "        0.00027464982147761604, 0.0, 22.0, 0.0, -0.00027464982147761604, 1.0\n",
     "    ),\n",
     "}\n",
-    "aster_basename = 'ASTGTMV003_N00E022_dem'"
+    "aster_basename = 'ASTGTMV003_N00E022_dem'\n",
+    "tempo_basename = 'TEMPO_NO2_L2_V04_20250909T140538Z_S005G01_regridded_filtered_product_vertical_column_troposphere_reformatted'"
    ]
   },
   {
@@ -236,7 +241,7 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_result_files = build_file_list(aster_basename, Path(temp_dir), 'PNG')\n",
+    "        test_result_files = build_file_list_downloads(downloaded_grid_outputs, 'PNG')\n",
     "\n",
     "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
@@ -293,7 +298,7 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_result_files = build_file_list(aster_basename, Path(temp_dir), 'JPEG')\n",
+    "        test_result_files = build_file_list_downloads(downloaded_grid_outputs, 'JPEG')\n",
     "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
@@ -388,7 +393,7 @@
     "        print_error('Exception not rasied for negative Scale Size.')\n",
     "        assert False, 'Fail Scale sizes test'\n",
     "    except Exception as exception:\n",
-    "        assert '\"scaleSize[1]\" should be >= 0' in str(\n",
+    "        assert 'negative dimensions are not allowed' in str(\n",
     "            exception\n",
     "        ), 'Exception not raised correctly'\n",
     "        print_success('Exception raised correctly for negative Scale Size.')\n",
@@ -463,7 +468,7 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
+    "        test_result_files = build_file_list_downloads(downloaded_grid_outputs, 'PNG')\n",
     "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
@@ -515,7 +520,7 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'JPG')\n",
+    "        test_result_files = build_file_list_downloads(downloaded_grid_outputs, 'JPG')\n",
     "\n",
     "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
@@ -579,7 +584,9 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
+    "        test_result_files = build_file_list_downloads(\n",
+    "            downloaded_scale_size_outputs, 'PNG'\n",
+    "        )\n",
     "\n",
     "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
@@ -638,7 +645,9 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_result_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
+    "        test_result_files = build_file_list_downloads(\n",
+    "            downloaded_dimensions_outputs, 'PNG'\n",
+    "        )\n",
     "\n",
     "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
@@ -745,20 +754,19 @@
     "        ]\n",
     "\n",
     "        # Perform the same checks for all tiles:\n",
+    "        tile_result_files = build_file_list_downloads(downloaded_tiled_outputs, 'PNG')\n",
+    "        for file_name in tile_result_files:\n",
+    "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
+    "        print_success(f'All {measures_basename} test files generated')\n",
+    "        tile_reference_files = []\n",
     "        for tile_basename in iceland_tiles:\n",
-    "            tile_reference_files = build_file_list(\n",
-    "                tile_basename, tiled_reference_dir, 'PNG'\n",
+    "            tile_reference_files.extend(\n",
+    "                build_file_list(tile_basename, tiled_reference_dir, 'PNG')\n",
     "            )\n",
-    "            tile_result_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
     "\n",
-    "            for file_name in tile_result_files:\n",
-    "                assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
-    "\n",
-    "            print_success(f'All {tile_basename} test files generated')\n",
-    "\n",
-    "            assert_dataset_produced_correct_results(\n",
-    "                tile_result_files[0], tile_reference_files[0], 'PNG'\n",
-    "            )\n",
+    "        for res, ref in zip(tile_result_files, tile_reference_files):\n",
+    "            if res.suffix.upper() == \"PNG\" and ref.suffix.upper() == \"PNG\":\n",
+    "                assert_dataset_produced_correct_results(res, ref, 'PNG')\n",
     "\n",
     "    print_success('Conversion of MEaSUREs GeoTIFF to tiled PNGs. Success')\n",
     "else:\n",
@@ -776,7 +784,9 @@
     "\n",
     "PREFIRE granules also cover the whole Earth at sufficient resolution such that HyBIG will create tiled output, so there will be 15 tiles generated (3 rows, 5 columns), with data covering an area above ±80° latitude.\n",
     "\n",
-    "This test primarily seeks to ensure the values in the output images use the colour map specified in the related URLs of the specified [UMM-Var record](https://cmr.uat.earthdata.nasa.gov/search/variables.umm_json?concept_id=V1270130943-LARC_CLOUD)."
+    "This test primarily seeks to ensure the values in the output images use the colour map specified in the related URLs of the specified [UMM-Var record](https://cmr.uat.earthdata.nasa.gov/search/variables.umm_json?concept_id=V1270130943-LARC_CLOUD).\n",
+    "\n",
+    "This request also uses more than 4GB of RAM in the HyBIG instance, so it will fail in deployments with less than 8GB allocated for the HyBIG worker."
    ]
   },
   {
@@ -816,21 +826,24 @@
     "                colour_map_job_id, overwrite=True, directory=temp_dir\n",
     "            )\n",
     "        ]\n",
+    "        tile_result_files = build_file_list_downloads(\n",
+    "            downloaded_colour_map_outputs, 'PNG'\n",
+    "        )\n",
     "\n",
+    "        for file_name in tile_result_files:\n",
+    "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
+    "\n",
+    "        print_success(f'All {prefire_basename} test files generated')\n",
+    "\n",
+    "        tile_reference_files = []\n",
     "        for tile_basename in prefire_tiles:\n",
-    "            tile_reference_files = build_file_list(\n",
-    "                tile_basename, colour_map_reference_dir, 'PNG'\n",
+    "            tile_reference_files.extend(\n",
+    "                build_file_list(tile_basename, colour_map_reference_dir, 'PNG')\n",
     "            )\n",
-    "            tile_result_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
     "\n",
-    "            for file_name in tile_result_files:\n",
-    "                assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
-    "\n",
-    "            print_success(f'All {tile_basename} test files generated')\n",
-    "\n",
-    "            assert_dataset_produced_correct_results(\n",
-    "                tile_result_files[0], tile_reference_files[0], 'PNG'\n",
-    "            )\n",
+    "        for res, ref in zip(tile_result_files, tile_reference_files):\n",
+    "            if res.suffix.upper() == \"PNG\" and ref.suffix.upper() == \"PNG\":\n",
+    "                assert_dataset_produced_correct_results(res, ref, 'PNG')\n",
     "\n",
     "    print_success(\n",
     "        'Conversion of PREFIRE GeoTIFF to PNG using custom colour map. Success'\n",
@@ -860,10 +873,6 @@
     "    prefire_basename = 'PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00'\n",
     "    polar_extent = [-4194304.0, -4194304.0, 4194304.0, 4194304.0]\n",
     "\n",
-    "    # Polar projections have square output dimensions, while geographic projection has rectangular dimensions (2x wider than height)\n",
-    "    # We expect to receive a single tile.\n",
-    "    prefire_tiles = [prefire_basename]\n",
-    "\n",
     "    polar_reference_dir = reference_dir / 'polar'\n",
     "\n",
     "    polar_request = Request(\n",
@@ -886,20 +895,21 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        for tile_basename in prefire_tiles:\n",
-    "            tile_reference_files = build_file_list(\n",
-    "                tile_basename, polar_reference_dir, 'PNG'\n",
-    "            )\n",
-    "            tile_result_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
+    "        tile_reference_files = build_file_list(\n",
+    "            prefire_basename, polar_reference_dir, 'PNG'\n",
+    "        )\n",
+    "        tile_result_files = build_file_list_downloads(\n",
+    "            downloaded_colour_map_outputs, 'PNG'\n",
+    "        )\n",
     "\n",
-    "            for file_name in tile_result_files:\n",
-    "                assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
+    "        for file_name in tile_result_files:\n",
+    "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
-    "            print_success(f'All {tile_basename} test files generated')\n",
+    "        print_success(f'All {tile_basename} test files generated')\n",
     "\n",
-    "            assert_dataset_produced_correct_results(\n",
-    "                tile_result_files[0], tile_reference_files[0], 'PNG'\n",
-    "            )\n",
+    "        assert_dataset_produced_correct_results(\n",
+    "            tile_result_files[0], tile_reference_files[0], 'PNG'\n",
+    "        )\n",
     "\n",
     "    print_success(\n",
     "        'Conversion of PREFIRE GeoTIFF to PNG using polar projection. Success'\n",
@@ -953,9 +963,7 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_result_files = build_file_list(\n",
-    "            antimeridian_basename, Path(temp_dir), 'PNG'\n",
-    "        )\n",
+    "        test_result_files = build_file_list_downloads(downloaded_grid_outputs, 'PNG')\n",
     "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
@@ -1015,7 +1023,7 @@
     "            )\n",
     "        ]\n",
     "\n",
-    "        test_result_files = build_file_list(rgba_basename, Path(temp_dir), 'PNG')\n",
+    "        test_result_files = build_file_list_downloads(downloaded_grid_outputs, 'PNG')\n",
     "        for file_name in test_result_files:\n",
     "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
@@ -1026,6 +1034,58 @@
     "        )\n",
     "\n",
     "    print_success('Conversion of OPERA RTC RGBA data to PNG Success')\n",
+    "else:\n",
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1adf4130",
+   "metadata": {},
+   "source": [
+    "### Test TEMPO L2\n",
+    "This test is intended to catch the clipping behavior for data that falls outside the colormap range. Values below the lowest color stop on the colormap should be mapped to that lowest colorstop (not NaN/transparency), and the same applies for values above the max color stop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ce36adb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    tempo_request = Request(\n",
+    "        collection=environment_information['tempo_collection'],\n",
+    "        granule_id=environment_information['tempo_granules'][0],\n",
+    "        format='image/png',\n",
+    "        variables=[environment_information['tempo_variable']],\n",
+    "    )\n",
+    "\n",
+    "    tempo_job_id = str(harmony_client.submit(tempo_request))\n",
+    "    harmony_client.wait_for_processing(tempo_job_id, show_progress=True)\n",
+    "\n",
+    "    reference_files = build_file_list(tempo_basename, reference_dir, 'PNG')\n",
+    "\n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        downloaded_grid_outputs = [\n",
+    "            file_future.result()\n",
+    "            for file_future in harmony_client.download_all(\n",
+    "                tempo_job_id, overwrite=True, directory=temp_dir\n",
+    "            )\n",
+    "        ]\n",
+    "\n",
+    "        test_result_files = build_file_list_downloads(downloaded_grid_outputs, 'PNG')\n",
+    "        for file_name in test_result_files:\n",
+    "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
+    "\n",
+    "        print_success('all test files generated')\n",
+    "\n",
+    "        assert_dataset_produced_correct_results(\n",
+    "            test_result_files[0], reference_files[0], 'PNG'\n",
+    "        )\n",
+    "\n",
+    "    print_success('Conversion of TEMPO L2 data to PNG Success')\n",
     "else:\n",
     "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
    ]
