DAS-2455: Add missing build_dmrpp_metadata.configuration attribute

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -200,6 +200,7 @@
     "    'build_dmrpp_metadata.bes',\n",
     "    'build_dmrpp_metadata.libdap',\n",
     "    'build_dmrpp_metadata.invocation',\n",
+    "    'build_dmrpp_metadata.configuration',\n",
     "}"
    ]
   },
