DAS-2455: Note inability to configure bounds & temporal collections

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -164,6 +164,9 @@
     "    'granule_id': 'G2040739631-GHRC_DAAC',\n",
     "}\n",
     "\n",
+    "# Production Temporal collection input data does not match.\n",
+    "# Production Bounds collection is a different version.\n",
+    "\n",
     "hoss_env = {\n",
     "    Environment.LOCAL: hoss_non_prod_information,\n",
     "    Environment.SIT: hoss_non_prod_information,\n",
