DAS-2455: Work in isolated directory and clean up downloads

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -43,12 +43,17 @@
    },
    "outputs": [],
    "source": [
+    "import shutil\n",
     "from datetime import datetime\n",
+    "from os import chdir\n",
     "from os.path import exists\n",
+    "from pathlib import Path\n",
     "\n",
     "from earthdata_hashdiff import nc4_matches_reference_hash_file\n",
     "from harmony import BBox, Client, Collection, Dimension, Environment, Request\n",
-    "from hoss_utilities import test_is_configured"
+    "from hoss_utilities import test_is_configured\n",
+    "\n",
+    "test_dir = Path.cwd()"
    ]
   },
   {
@@ -123,6 +128,27 @@
     "\n",
     "if harmony_environment is not None:\n",
     "    harmony_client = Client(env=harmony_environment)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5113d1a5-aedd-47f0-8008-6e90451b00ba",
+   "metadata": {},
+   "source": [
+    "### Work in an isolated directory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4977f52-ee04-45b7-9610-7c6113a5131d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "work_dir = test_dir / 'hoss_workdir'\n",
+    "work_dir.mkdir(exist_ok=True)\n",
+    "chdir(work_dir)\n",
+    "print(f'Working directory changed to: {Path.cwd()}')"
    ]
   },
   {
@@ -252,7 +278,7 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_var_bbox_file_name,\n",
-    "        'reference_files/hoss_var_bbox_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_var_bbox_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, bounding box request.'\n",
     "\n",
@@ -308,7 +334,7 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        grid_edge_file_name,\n",
-    "        'reference_files/hoss_grid_edge_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_grid_edge_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, crossing longitudinal edge.'\n",
     "\n",
@@ -348,7 +374,7 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        no_bbox_file_name,\n",
-    "        'reference_files/hoss_no_bbox_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_no_bbox_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, no bounding box.'\n",
     "\n",
@@ -389,7 +415,7 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_all_vars_file_name,\n",
-    "        'reference_files/hoss_all_vars_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_all_vars_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS all-variable request.'\n",
     "\n",
@@ -457,7 +483,7 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_temporal_file_name,\n",
-    "        'reference_files/hoss_temporal_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_temporal_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS temporal request.'\n",
     "\n",
@@ -504,7 +530,7 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_named_dims_file_name,\n",
-    "        'reference_files/hoss_named_dimensions_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_named_dimensions_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS named dimensions request.'\n",
     "\n",
@@ -571,7 +597,7 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_shape_file_name,\n",
-    "        'reference_files/hoss_shape_file_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_shape_file_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS-Geographic polygon spatial subset request.'\n",
     "\n",
@@ -619,7 +645,7 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_bounds_file_name,\n",
-    "        'reference_files/hoss_bounds_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_bounds_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS bounds request.'\n",
     "\n",
@@ -706,7 +732,7 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_projected_file_name,\n",
-    "        'reference_files/hoss_projected_north_slope_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_projected_north_slope_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS-Projection-gridded bounding box request.'\n",
     "\n",
@@ -757,7 +783,7 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_projected_shape_file_name,\n",
-    "        'reference_files/hoss_projected_north_slope_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_projected_north_slope_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS-Projection-gridded shape file request.'\n",
     "\n",
@@ -845,7 +871,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_bbox_spatial_file_name,\n",
-    "        'reference_files/hoss_bbox_3d_no_dimensions_zyx_order_reference.json',\n",
+    "        test_dir\n",
+    "        / 'reference_files/hoss_bbox_3d_no_dimensions_zyx_order_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS bounding box spatial, 3-D (well ordered) request.'\n",
     "\n",
@@ -938,7 +965,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_shape_file_polygon_spatial_3d_file_name,\n",
-    "        'reference_files/hoss_shape_file_3d_no_dimensions_yxz_order_reference.json',\n",
+    "        test_dir\n",
+    "        / 'reference_files/hoss_shape_file_3d_no_dimensions_yxz_order_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS bounding box spatial, 3-D (poorly ordered) request.'\n",
     "\n",
@@ -1030,13 +1058,43 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_shape_file_polygon_spatial_file_name,\n",
-    "        'reference_files/hoss_shape_file_2d_no_dimensions_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_shape_file_2d_no_dimensions_reference.json',\n",
     "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS polygon spatial subset no dimensions request.'\n",
     "\n",
     "    print_success('HOSS polygon 2d no dimensions spatial subset request.')\n",
     "else:\n",
     "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9fcff2f-f575-4565-a071-117022540d12",
+   "metadata": {},
+   "source": [
+    "### Clean up working directory's downloaded files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "442bf5c9-d691-4a32-9e08-50a1c565403c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chdir(test_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5206cd6-b687-4034-839b-161a10f862d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if work_dir.exists():\n",
+    "    shutil.rmtree(work_dir)\n",
+    "    print(f'Removed download directory and all files: {work_dir}')"
    ]
   }
  ],
