--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -558,7 +558,7 @@
    "source": [
     "hoss_shape_non_prod_information = {\n",
     "    'collection': Collection(id='C1245618475-EEDTEST'),\n",
-    "    'shape_file_path': 'amazon_basin.geo.json',\n",
+    "    'shape_file_path': str(test_dir / 'amazon_basin.geo.json'),\n",
     "    'granule_id': 'G1245649517-EEDTEST',\n",
     "}\n",
     "\n",
@@ -686,7 +686,7 @@
     "hoss_projected_non_prod_information = {\n",
     "    'collection': Collection(id='C1245804308-EEDTEST'),\n",
     "    'bbox': BBox(w=-160, s=68, e=-150, n=70),\n",
-    "    'shape_file_path': 'north_slope.geo.json',\n",
+    "    'shape_file_path': str(test_dir / 'north_slope.geo.json'),\n",
     "    'granule_id': 'G1245804356-EEDTEST',\n",
     "    'temporal_range': {\n",
     "        'start': datetime(2008, 7, 2, 0, 0, 0),\n",
@@ -765,7 +765,9 @@
    "outputs": [],
    "source": [
     "if test_is_configured(hoss_projected_info, 'collection'):\n",
-    "    hoss_projected_shape_file_name = 'hoss_projected_north_slope_shape.nc4'\n",
+    "    hoss_projected_shape_file_name = str(\n",
+    "        test_dir / 'hoss_projected_north_slope_shape.nc4'\n",
+    "    )\n",
     "    hoss_projected_request = Request(\n",
     "        collection=hoss_projected_info['collection'],\n",
     "        granule_id=hoss_projected_info['granule_id'],\n",
@@ -909,7 +911,7 @@
     "hoss_shape_file_polygon_spatial_3d_non_prod_information = {\n",
     "    'collection': Collection(id='C1268452378-EEDTEST'),\n",
     "    'granule_id': 'G1268452388-EEDTEST',\n",
-    "    'shape_file_path': 'usa-mainland.geojson',\n",
+    "    'shape_file_path': str(test_dir / 'usa-mainland.geojson'),\n",
     "}\n",
     "\n",
     "hoss_shape_file_polygon_spatial_3d_prod_information = {\n",
@@ -1002,7 +1004,7 @@
     "hoss_shape_file_polygon_spatial_non_prod_information = {\n",
     "    'collection': Collection(id='C1268399578-EEDTEST'),\n",
     "    'granule_id': 'G1268399648-EEDTEST',\n",
-    "    'shape_file_path': 'usa-mainland.geojson',\n",
+    "    'shape_file_path': str(test_dir / 'usa-mainland.geojson'),\n",
     "}\n",
     "\n",
     "hoss_shape_file_polygon_spatial_prod_information = {\n",
